[feat]: completed profile UI

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,8 @@
   font-family: Roboto;
   src: url("../src/assets/fonts/Roboto-Regular.ttf");
 }
+
+@font-face {
+  font-family: Inter;
+  src: url("../src/assets/fonts/Inter-Regular.ttf");
+}
