[feat]: added teacher statistics

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,8 @@
   font-family: Inter;
   src: url("../src/assets/fonts/Inter-Regular.ttf");
 }
+
+@font-face {
+  font-family: Helvetica;
+  src: url("../src/assets/fonts/Helvetica.ttf");
+}
